# healthlens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_missing_tables.py
app/: __init__.py  config.py  database.py  main.py  worker.py
app/api/: auth.py  connections.py  dashboard.py  deps.py  diagnosis.py  genome.py  goals.py  knowledge.py  medication_adherence.py  medications.py  notifications.py  observations.py  profiles.py  records.py  reports.py  tcm.py
app/connectors/: __init__.py  apple_health.py  base.py  hospital_lis.py  huawei_health.py  withings.py  xiaomi_health.py
app/core/: diagnosis_engine.py  fhir_exporter.py  health_analyzer.py  ocr_engine.py  pgx_engine.py  report_parser.py  risk_engine.py  tcm_engine.py  tcm_food_therapy.py  tcm_formula_engine.py  tcm_tongue_analyzer.py
app/models/: __init__.py  base.py  data_connection.py  diagnosis.py  genomics.py  health_goal.py  health_record.py  medication.py  medication_adherence.py  notification.py  observation.py  prescription.py  record.py  risk_assessment.py  tcm_formula.py  tcm_knowledge.py  tcm_profile.py  tcm_syndrome.py  tcm_tongue.py  (+1 more)
nginx/: nginx.conf
scripts/: check_env.ps1  deploy.sh  dev.bat  dev.ps1  import_tcm_books.py  init_dev.ps1  init_git.sh  run_tests.ps1  seed_admin.py  worker.bat  worker.ps1
tests/: conftest.py  test_connectors.py
(+55 files in other folders)
