[project]
name = "healthlens"
version = "0.8.2"
description = "HealthLens - 中西医融合健康管理平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "asyncpg",
    "pydantic>=2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "loguru",
    "httpx",
    "celery[redis]",
    "redis",
    "fhir.resources",
    "pillow",
    "numpy",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "cryptography>=41.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "aiosqlite>=0.19",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
